<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="13dp"
android:paddingTop="13dp"
android:paddingLeft="13dp"
android:paddingRight="13dp"
tools:context="com.training.todo_list.activities.todo_list.EditTODOActivity"
android:background="@drawable/background_app">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/linearLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EditToDo_title"
        android:layout_gravity="center"
        android:textColor="@color/bootstrap_info_shadowed"
        android:id="@+id/txt_EditTodoTitle" />


</LinearLayout>



<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:id="@+id/linearLayout1"
    android:layout_below="@+id/linearLayout">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/background_white_shady">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textMultiLine"
            android:ems="1"
            android:textColor="@color/bootstrap_default_shadowed"
            android:background="@android:color/transparent"
            android:id="@+id/edt_EditTodoDesc" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/background_white_shady">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EditToDo_type"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/txt_EditTodoType" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_TodoType" />

    </LinearLayout>
</LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="170dp"
    android:layout_below="@+id/linearLayout1">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/EditToDo_btn"
        android:textColor="@color/white"
        android:id="@+id/btn_editTodo"
        android:background="@color/add_button"
        android:onClick="EditTODO"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/AddToDo_back_btn"
        android:textColor="@color/white"
        android:id="@+id/btn_backList"
        android:background="@color/back_button"
        android:onClick="BackToList"/>

</LinearLayout>
</RelativeLayout>